--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "1.4.0",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
+    "react-zoom-pan-pinch": "^3.4.4",  
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
