--- a/package.json
+++ b/package.json
@@ -7,55 +7,31 @@
     "dev": "node server.js",
     "build": "next build",
     "server": "nodemon server.js",
-    "start": "NODE_ENV=production node server.js",
+    "start": "set NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "author": "Sandeep Verma",
   "license": "ISC",
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
-    "aws-sdk": "2.1389.0",
     "axios": "1.4.0",
-    "bcryptjs": "^2.4.3",
-    "bluebird": "^3.7.2",
     "react-zoom-pan-pinch": "^3.4.4",  
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
-    "express-session": "^1.17.3",
-    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.0",
-    "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.43",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
     "next": "13.4.4",
-    "node-cron": "^3.0.2",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
-    "react-google-recaptcha": "^2.1.0",
-    "react-phone-input-2": "^2.15.1",
-    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.1",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "sharp": "^0.32.1",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.6.2",
-    "styled-components": "^5.3.11",
-    "sweetalert2": "^11.7.10",
-    "sweetalert2-react-content": "^5.0.7",
-    "uniqid": "^5.4.0"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.1.3",
