--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "node server.js",
     "build": "next build",
     "server": "nodemon server.js",
-    "start": "set NODE_ENV=production node server.js",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "author": "Sandeep Verma",
