--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "axios": "1.4.0",
-    "react-zoom-pan-pinch": "^3.4.4",  
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
@@ -26,6 +26,7 @@
     "react-redux": "^9.1.0",
     "react-slick": "^0.30.1",
     "react-toastify": "^9.1.3",
+    "react-zoom-pan-pinch": "^3.4.4",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
