--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.1.3",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.4",
     "webpack": "^5.85.0"
   }
 }
