--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-zoom-pan-pinch": "^3.4.4",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.6.2",
