--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
+    "@types/react": "18.3.11",
     "babel-plugin-styled-components": "^2.1.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
